2010-12-08 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-require-main): Disable
	`epackage-require-emacs'. url.el not used yet.
	(epackage--batch-ui-menu-header): New.
	(epackage-maintainer): New.

2010-12-07 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-push): New. Rewrite all other functions to
	take advantage of this macro.
	(epackage-status-installed-packages): New.
	(epackage-initialize-verify): New.
	(epackage--symlink-support-flag): New.
	(epackage-enable-file): New.
	(epackage-enable-package): Use `epackage-enable-file'.
	(epackage-activate-package): Use `epackage-enable-file'.
	(epackage-manager): New.
	(epackage-version): devel New.
	(epackage-documentation): New.
	(epackage--doc-buffer): New.
	(epackage--finder-commentary-buffer): New.
	(epackage-documentation-header-string): New.
	(epackage-documentation): New.
	(epackage-version): New.
	(epackage-batch-macro): New.
	(epackage-batch-download-packages): New.
	(epackage-batch-upgrade-package): New.
	(epackage-batch-upgrade-all-packages): New.
	(epackage-file-name-package-compose): Rename. Was
	`epackage-file-name-vcs-compose'.
	(epackage--directory-name-pkg): Rename. Was
	`epackage--directory-name-vcs'.
	(epackage-status-downloaded-packages): New.
	(epackage-status-enabled-packages): Rename. Was
	`epackage-status-installed-packages'.
	(epackage-status-of-packages): New.
	(epackage-status-installed-packages): New.
	(epackage-status-activated-packages): New.
	(epackage-file-name-pkg-directory): Rename. Was
	`epackage-file-name-vcs-directory'
	(epackage-cmd-upgrade-all-packages): New.
	(epackage-message): New.
	(epackage-with-message): Use `epackage-message'.
	(epackage-with-verbose): New.
	(epackage-verbose-message): New.
	(epackage-cmd-upgrade-all-packages): New.
	(epackage-error): New.
	(epackage-cmd-select-package): New.
	(epackage-cmd-upgrade-package): Use `epackage-cmd-select-package'.
	(epackage-cmd-download-package): Use `epackage-cmd-select-package'.